{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 637,
  "lineage": "a7ac391c-7cb2-7b3a-87ab-ddcac6e45d17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c17797beba8be798",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0f4a6adeb6e1bb9b2",
            "domain": "vpc",
            "id": "eipalloc-0c17797beba8be798",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09898863d8424ed9a",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-7-214-37.compute-1.amazonaws.com",
            "public_ip": "52.7.214.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.VPC_gateway",
            "aws_network_interface.network-interface",
            "aws_security_group.allow_traffic",
            "aws_subnet.main_subnet",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d7a109bf30624c99",
            "arn": "arn:aws:ec2:us-east-1:583893231145:instance/i-0a4cd4d5c56b87c51",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4cd4d5c56b87c51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007852b44ba84d7b7",
            "private_dns": "ip-172-31-47-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.211",
            "public_dns": "ec2-54-224-80-139.compute-1.amazonaws.com",
            "public_ip": "54.224.80.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-058e87c538d30aa6d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff06bcd12b53fa2a",
            "tags": {
              "Name": "my_ec2"
            },
            "tags_all": {
              "Name": "my_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0972eecdd482a07e6"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPC_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583893231145:internet-gateway/igw-0bc565f5eaef582bd",
            "id": "igw-0bc565f5eaef582bd",
            "owner_id": "583893231145",
            "tags": {
              "Name": "internet door"
            },
            "tags_all": {
              "Name": "internet door"
            },
            "vpc_id": "vpc-0d8679a11910a7c0b"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583893231145:network-interface/eni-09898863d8424ed9a",
            "id": "eni-09898863d8424ed9a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:0b:92:80:81:b5",
            "owner_id": "583893231145",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f1b9879d6b0ac9d4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031b1345ec4add86f"
          },
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_subnet.main_subnet",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583893231145:route-table/rtb-03f900a7fdb5ed2e4",
            "id": "rtb-03f900a7fdb5ed2e4",
            "owner_id": "583893231145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc565f5eaef582bd",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc565f5eaef582bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lenient Route Table"
            },
            "tags_all": {
              "Name": "Lenient Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8679a11910a7c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.VPC_gateway",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0068cddfc4d6afad1",
            "route_table_id": "rtb-03f900a7fdb5ed2e4",
            "subnet_id": "subnet-031b1345ec4add86f"
          },
          "dependencies": [
            "aws_internet_gateway.VPC_gateway",
            "aws_route_table.route_table",
            "aws_subnet.main_subnet",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583893231145:security-group/sg-0f1b9879d6b0ac9d4",
            "description": "Allow Web inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic out of all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1b9879d6b0ac9d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic into all ports",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_all_web_traffic",
            "name_prefix": "",
            "owner_id": "583893231145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_traffic"
            },
            "tags_all": {
              "Name": "allow_all_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8679a11910a7c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583893231145:subnet/subnet-031b1345ec4add86f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031b1345ec4add86f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583893231145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main subnet"
            },
            "tags_all": {
              "Name": "main subnet"
            },
            "vpc_id": "vpc-0d8679a11910a7c0b"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583893231145:vpc/vpc-0d8679a11910a7c0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4afdefcb8434910",
            "default_route_table_id": "rtb-01eeab2a2263a5681",
            "default_security_group_id": "sg-01ed039027f14625e",
            "dhcp_options_id": "dopt-0aac4dfb51b00083d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8679a11910a7c0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01eeab2a2263a5681",
            "owner_id": "583893231145",
            "tags": {
              "Name": "main VPC"
            },
            "tags_all": {
              "Name": "main VPC"
            }
          }
        }
      ]
    }
  ]
}